Fix layout issues
The layout is broken, with a blank space and content stretched to the right.  This commit aims to fix these issues.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 
 #root {
-  max-width: 100%;
   width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  text-align: left;
 }
 
 .logo {
